--- a/notes.Rmd
+++ b/notes.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to LaTeX and knitr"
 author: "Steve Pederson"
-date: "26 August 2016"
+date: "8th March 2017"
 output: ioslides_presentation
 ---
 
